added timeblocks to index.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container" id="timeblocks">
-        <p id="timeblock-color-code">(Note: Gray - Past, Green - Present, Red - Future)</p>
-      <!-- Timeblocks go here -->
+        <p id="timeblock-color-code">(Note: Gray - Past event, Green - Present event, Red - Future event)</p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
